spectec/test/elab/neg/ctx-builtin-dec-redefined.spectec
;; A builtin dec is declared twice with the same identifier.

builtin dec $f : nat
builtin dec $f : nat
